Development Portal (2021-02-25 shi)
==============================
Add Glossary button to search section on all pages
Update Year Range glossary description
Added link to Year Range reference
Update css
Update Print-Friendly and all theme css


Development Portal (2021-02-10 shi)
==============================
Fix rgba views for Generator


Development Portal (2021-01-25 shi)
==============================
Update dash css


Development Portal (2021-01-22 shi)
==============================
Fix cron layout
Update dash css


Development Portal (2021-01-20 shi)
==============================
Update text for Quick search
Update sector vocabulary filter


Development Portal (2021-01-18 shi)
==============================
Search 2 update filter sector vocabulary
Update glossary


Development Portal (2020-09-18 shi)
==============================
Search 2 update filter budget, planned disbursement and activity scope


Development Portal (2020-09-16 shi)
==============================
Css fixes


Development Portal (2020-08-03 shi)
==============================
Changed trending to quick search
Updated print-friendly html background-color


Development Portal (2020-07-17 shi)
==============================
Hide utter box until further notice


Development Portal (2020-07-01 shi)
==============================
Update utter box with explicit info


Development Portal (2020-06-26 shi)
==============================
Fix z-index of utter link
Fix code-name recipient-region in transaction table


Development Portal (2020-06-24 shi)
==============================
Fix refine search COVID-19
Add feedback mechanism


Development Portal (2020-06-17 shi)
==============================
Update print body and table font colour
Update savi css theme button


Development Portal (2020-06-12 shi)
==============================
Display exchange rates and currencies logic on data pages
Update all translations


Development Portal (2020-06-11 shi)
==============================